crates/keron-lang/tests/corpus/errors/parse/pattern_lowercase_struct_name.keron
val label: String = match 1 {
  point { x } => "point",
  _ => "other",
}
